[tool.poetry]
name = "pythonheadpain"
version = "0.1.0"
description = ""
authors = ["Gelena Bezusco <helenatcitok@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
pandas = "^2.1.3"


[tool.poetry.group.lint.dependencies]
mypy = "^1.6.1"
black = "^23.10.1"
isort = "^5.12.0"
flake8 = "^6.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pandas-stubs = "^2.1.1.230928"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
